# seL4-roottask-test

./: CMakeLists.txt  README.md  settings.cmake
roottask/: CMakeLists.txt  main.c
